--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Max Lebedinsky / front-end developer</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
@@ -19,16 +19,27 @@
             <nav class="navigation">
                 <a href="#" class="nav-item selected">Портфолио</a>
                 <a href="#" class="nav-item">Резюме</a>
-                <a href="contacts.html" class="nav-item">Контакты</a>
+                <a href="./pages/contacts.html" class="nav-item">Контакты</a>
             </nav>
         </div>
     </header>
     <main>
         <h1>Портфолио</h1>
         <div class="wrapper">
-            <section class="portfolio-item">
-                item #1
-            </section>
+            <a href="cube.html" class="portfolio-item">
+                <div class="portfolio-item-left">
+                    <img src="images/cube.png" alt="cube" class="portfolio-item-left-image">
+                </div>
+                <div>
+                    <h2>3D Cube</h2>
+                    <p class="portfolio-item-text">
+                        To rotate – click and drag. </p>
+                    <p class="portfolio-item-text">
+                        To zoom – scroll mouse wheel.</p>
+                    <p class="portfolio-item-text">
+                        Made with just 2 divs in HTML.</p>
+                </div>
+            </a>
             <section class="portfolio-item">
                 item #2
             </section>
