--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Max Lebedinsky / front-end developer</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <p class="subtitle">Front-end разработчик</p>
             </div>
             <nav class="navigation">
-                <a href="index.html" class="nav-item">Портфолио</a>
+                <a href="../index.html" class="nav-item">Портфолио</a>
                 <a href="#" class="nav-item">Резюме</a>
                 <a href="#" class="nav-item selected">Контакты</a>
             </nav>
