styled item template

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="wrapper">
             <a href="cube.html" class="portfolio-item">
                 <div class="portfolio-item-left">
-                    <img src="images/cube.png" alt="cube" class="portfolio-item-left-image">
+                    <img src="images/cube.png" alt="cube">
                 </div>
-                <div>
+                <div class="portfolio-item-right">
                     <h2>3D Cube</h2>
                     <p class="portfolio-item-text">
                         To rotate – click and drag. </p>
@@ -38,13 +38,25 @@
                         To zoom – scroll mouse wheel.</p>
                     <p class="portfolio-item-text">
                         Made with just 2 divs in HTML.</p>
+                    <div class="portfolio-item-text-bottom">
+                        <p>HTML / CSS / Javascript</p>
+                    </div>
                 </div>
+                <form action="./pages/contacts.html">
+                    <button>GitHub</button>
+                </form>
             </a>
             <section class="portfolio-item">
                 item #2
             </section>
             <section class="portfolio-item">
                 item #3
+            </section>
+            <section class="portfolio-item">
+                item #4
+            </section>
+            <section class="portfolio-item">
+                item #5
             </section>
         </div>
     </main>
