added 1st item page structure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <h1>Портфолио</h1>
         <div class="wrapper">
-            <a href="cube.html" class="portfolio-item">
+            <a href="./pages/cube.html" class="portfolio-item">
                 <div class="portfolio-item-left">
                     <img src="images/cube.png" alt="cube">
                 </div>
