--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <div class="wrapper">
             <a href="./pages/cube.html" class="portfolio-item">
                 <div class="portfolio-item-left">
-                    <img src="images/cube.png" alt="cube">
+                    <img src="images/cube.jpg" alt="cube">
                 </div>
                 <div class="portfolio-item-right">
                     <h2>3D Cube</h2>
                     <p class="portfolio-item-text">
-                        To rotate – click and drag. </p>
+                        Rotate – click and drag. </p>
                     <p class="portfolio-item-text">
-                        To zoom – scroll mouse wheel.</p>
+                        Zoom – scroll mouse wheel.</p>
                     <p class="portfolio-item-text">
                         Made with just 2 divs in HTML.</p>
                     <div class="portfolio-item-text-bottom">
