removed descendant <button> in <a> in portfolio-item

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <h1>Портфолио</h1>
         <div class="wrapper">
-            <a href="./pages/cube.html" class="portfolio-item">
+            <!-- <a href="./pages/cube.html" class="portfolio-item">
                 <div class="portfolio-item-left">
                     <img src="images/cube.jpg" alt="cube">
                 </div>
@@ -45,9 +45,27 @@
                 <form action="./pages/contacts.html">
                     <button>GitHub</button>
                 </form>
-            </a>
-            <section class="portfolio-item">
-                item #2
+            </a> -->
+            <section class="portfolio-item" onclick="location.href='./pages/cube.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/cube.jpg" alt="cube">
+                </div>
+                <div class="portfolio-item-right">
+                    <h2>3D Cube</h2>
+                    <p class="portfolio-item-text">
+                        Rotate – click and drag. </p>
+                    <p class="portfolio-item-text">
+                        Zoom – scroll mouse wheel.</p>
+                    <p class="portfolio-item-text">
+                        Made with just 2 divs in HTML.</p>
+                    <div class="portfolio-item-text-bottom">
+                        <p>HTML / CSS / Javascript</p>
+                    </div>
+                </div>
+                <a href="./pages/contacts.html">GitHub</a>
+                <!-- <form action="./pages/contacts.html">
+                    <button>GitHub</button>
+                </form> -->
             </section>
             <section class="portfolio-item">
                 item #3
