--- a/pages/building.html
+++ b/pages/building.html
@@ -6,46 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Building</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/building.css">
 </head>
 
 <body>
-    <main class="building">
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">sometimes</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">we need</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">nothing</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">but good CSS skills</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">to make something</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">amazing</p>
-        </section>
-
-        <section class="room">
-            <div class="room-walls"></div>
-            <p class="room-content">without javascript</p>
-        </section>
+    <header>
+        <div class="header-content">
+            <div class="title">
+                <p class="name">Максим Лебединский</p>
+                <p class="subtitle">Front-end разработчик</p>
+            </div>
+            <nav class="navigation">
+                <a href="../index.html" class="nav-item">Портфолио</a>
+                <a href="#" class="nav-item">Резюме</a>
+                <a href="./contacts.html" class="nav-item">Контакты</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Scrollable Building</h1>
+        <div class="wrapper frame">
+            <div class="building">
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">sometimes</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">we need</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">nothing but</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">good CSS skills</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">to make something</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">amazing</p>
+                </div>
+                <div class="room">
+                    <div class="room-walls"></div>
+                    <p class="room-content">without javascript</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
