fixed typos and wrong links

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                     <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
                         <div class="github-popup-content">
                             <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.html"
-                                onclick="event.stopPropagation()" target="_blank">folower.HTML</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.js"
-                                onclick="event.stopPropagation()" target="_blank">folower.JS</a>
+                                onclick="event.stopPropagation()" target="_blank">follower.HTML</a>
+                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/follower.js"
+                                onclick="event.stopPropagation()" target="_blank">follower.JS</a>
                             <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/follower.css"
                                 onclick="event.stopPropagation()" target="_blank">follower.CSS</a>
                             <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
