added scoring and god mode to snake game

--- a/pages/snake.html
+++ b/pages/snake.html
@@ -29,8 +29,11 @@
         <h1>Snake Game</h1>
         <div class="wrapper frame">
             <table id="game"></table>
+            <div class="score">Score <span id="score-value"></span> </div>
             <button id="startBtn">Старт</button>
             <button id="pauseBtn">Пауза</button>
+            <input type="checkbox" id="god-mode-checkbox">
+            <label for="god-mode-checkbox">No lose mode</label>
             <div id="message"></div>
         </div>
     </main>
