styled legend for snake

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
             </section>
             <section class="portfolio-item" onclick="location.href='./pages/snake.html'">
                 <div class="portfolio-item-left">
-                    <!-- <img src="images/follower.png" alt="building"> -->
+                    <img src="images/snake.png" alt="building">
                 </div>
                 <div class="portfolio-item-right">
                     <h2>Snake Game</h2>
-                    <p>Cat tracks mouse movements</p>
-                    <p>Click the buttons to change the cursor</p>
-                    <p></p>
-                    <p>HTML / SCSS / Javascript / JQuery</p>
+                    <p>Use arrow keys to turn the snake</p>
+                    <p>Adjust speed and score required to win</p>
+                    <p>Turn on «Immortal mode» to pass through the walls</p>
+                    <p>HTML / CSS / Javascript</p>
                 </div>
                 <div class="github-popup-opener" onclick="event.stopPropagation()">
                     <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
