reduced portfolio-item height to 200px

--- a/index.html
+++ b/index.html
@@ -86,53 +86,58 @@
                     <img src="images/follower.png" alt="building">
                 </div>
                 <div class="portfolio-item-right">
-                    <h2>Perspective Follower</h2>
-                    <p>Cat tracks mouse movements</p>
-                    <p>Click the buttons to change the cursor</p>
-                    <p></p>
-                    <p>HTML / SCSS / Javascript / JQuery</p>
-                </div>
-                <div class="github-popup-opener" onclick="event.stopPropagation()">
-                    <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
-                        <div class="github-popup-content">
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.html"
-                                onclick="event.stopPropagation()" target="_blank">follower.HTML</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/follower.js"
-                                onclick="event.stopPropagation()" target="_blank">follower.JS</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/follower.css"
-                                onclick="event.stopPropagation()" target="_blank">follower.CSS</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
-                                onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                    <div class="portfolio-item-right-header">
+                        <h2>Perspective Follower</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.html"
+                                        onclick="event.stopPropagation()" target="_blank">follower.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/follower.js"
+                                        onclick="event.stopPropagation()" target="_blank">follower.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/follower.css"
+                                        onclick="event.stopPropagation()" target="_blank">follower.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <p>Cat tracks mouse movements</p>
+                    <p>Click the buttons to change the cursor</p>
+                    <p>HTML / SCSS / Javascript / JQuery</p>
                 </div>
             </section>
+
             <section class="portfolio-item" onclick="location.href='./pages/snake.html'">
                 <div class="portfolio-item-left">
-                    <img src="images/snake.png" alt="building">
+                    <img src="images/snake.png" alt="snake">
                 </div>
                 <div class="portfolio-item-right">
-                    <h2>Snake Game</h2>
+                    <div class="portfolio-item-right-header">
+                        <h2>Snake Game</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.html"
+                                        onclick="event.stopPropagation()" target="_blank">follower.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/follower.js"
+                                        onclick="event.stopPropagation()" target="_blank">follower.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/follower.css"
+                                        onclick="event.stopPropagation()" target="_blank">follower.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <p>Use arrow keys to turn the snake</p>
                     <p>Adjust speed and score required to win</p>
                     <p>Turn on «Immortal mode» to pass through the walls</p>
                     <p>HTML / CSS / Javascript</p>
                 </div>
-                <div class="github-popup-opener" onclick="event.stopPropagation()">
-                    <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
-                        <div class="github-popup-content">
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/follower.html"
-                                onclick="event.stopPropagation()" target="_blank">follower.HTML</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/follower.js"
-                                onclick="event.stopPropagation()" target="_blank">follower.JS</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/follower.css"
-                                onclick="event.stopPropagation()" target="_blank">follower.CSS</a>
-                            <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
-                                onclick="event.stopPropagation()" target="_blank">main.CSS</a>
-                        </div>
-                    </div>
-                </div>
             </section>
+
             <section class="portfolio-item">
                 item #3
             </section>
