--- a/pages/snake.html
+++ b/pages/snake.html
@@ -47,8 +47,8 @@
                     <button id="startBtn">Start</button>
                     <button id="pauseBtn">Pause</button>
                 </div>
-                <p class="tip">Use arrow keys <span>&#129052;</span> <span>&#129054</span>
-                    <span>&#129053</span> <span>&#129055</span>
+                <p class="tip">Use arrow keys <span>&#129052;</span> <span>&#129054;</span>
+                    <span>&#129053;</span> <span>&#129055;</span>
                 </p>
             </div>
         </div>
